Add function tasks

--- a/javascriptFundamentals/index.html
+++ b/javascriptFundamentals/index.html
@@ -1,7 +1,7 @@
 <!-- 1st task show an alert and show an alert with extrenal script -->
 <!DOCTYPE html>
 <body>
-    <script src="switchStatement.js">
+    <script src="functions.js">
         // alert("I'm JavaScript!")
     </script>
 </body>
