--- a/movieAPI/index.html
+++ b/movieAPI/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <link rel="stylesheet" href="style.css" />
+        <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&family=Roboto&display=swap" rel="stylesheet">
         <title>Movie API</title>
     </head>
     <body>
@@ -11,16 +12,6 @@
         </header>
 
         <div id="main" class="container">
-            <div class="movie-description">
-                <img src="jelly.jpg" alt="image">
-                <div class="movie-title">
-                    <h3>Movie title</h3>
-                </div>
-                <div class="overview">
-                    dhcidaicidacidavidaviadhvinciadnviad
-                    ncjdanvjndajvnajdvnjadnvj
-                </div>
-            </div>
         </div>
 
         <script src="script.js"></script>
