--- a/movieAPI/index.html
+++ b/movieAPI/index.html
@@ -14,6 +14,6 @@
         <div id="main" class="container">
         </div>
 
-        <script src="script.js"></script>
+        <script src="script.js" type="module"></script>
     </body>
 </html>
